[gd_scene load_steps=2 format=2]

[ext_resource path="res://select_tilemap.gd" type="Script" id=1]

[node name="BigMap" type="Node2D"]
script = ExtResource( 1 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 960, 540 )
current = true
limit_left = 0
limit_top = 0
limit_smoothed = true
smoothing_enabled = true

[node name="Chunks" type="Node2D" parent="."]

[node name="ColorRect" type="ColorRect" parent="Chunks"]
margin_left = 200.0
margin_top = 200.0
margin_right = 411.0
margin_bottom = 370.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LayerGUI" type="CanvasLayer" parent="."]

[node name="ControlDetectMouse" type="Control" parent="LayerGUI"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="LayerGUI/ControlDetectMouse"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 3.1748
margin_bottom = 3.1748
mouse_filter = 2
custom_constants/margin_right = 100
custom_constants/margin_top = 100
custom_constants/margin_left = 100
custom_constants/margin_bottom = 100
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DetectMouseRect" type="TextureRect" parent="LayerGUI/ControlDetectMouse/MarginContainer"]
margin_left = 100.0
margin_top = 100.0
margin_right = 1100.0
margin_bottom = 600.0
mouse_filter = 2

[connection signal="mouse_entered" from="Chunks/ColorRect" to="." method="_on_ColorRect_mouse_entered"]
